--- a/namaha/style.css
+++ b/namaha/style.css
@@ -4,7 +4,7 @@ Theme URI: https://www.outtheboxthemes.com/wordpress-themes/namaha/
 Author: Out the Box
 Author URI: https://www.outtheboxthemes.com/
 Description: Balanced & Beautiful. Namaha is a beautifully designed WordPress theme with minimalist zen design elements that provide a clean platform from which to promote your offering. Its quiet personality speaks volumes without saying a word, letting your products, services and brand take center stage on your site. This understated attitude makes it perfect for just about any type of website, online shop or blog particularly those in the yoga, health, nutritionist, wellness, coaching, meditation, spiritual, feng shui, spa, fitness, mentor, dietitian, therapist, psychologist, personal development or motivational speaker industries.
-Version: 1.0.55
+Version: 1.0.56
 Tested up to: 6.7
 Requires at least: 4.7
 Requires PHP: 5.3
@@ -77,6 +77,7 @@ html {
 	-webkit-text-size-adjust: 100%; /* Prevents iOS text size adjust after orientation change, without disabling user zoom */
 	-ms-text-size-adjust:     100%; /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
 	box-sizing: border-box; /* Apply a natural box layout model to the document; see http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
+	scroll-behavior: smooth;
 }
 *,
 *:before,
@@ -5086,6 +5087,12 @@ body.mobile-device .side-aligned-social-links.hide-for-mobile {
 body.mobile-device .slider-container.default .controls-container,
 body.mobile-device .slider-container.default .pagination {
 	display: none !important;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+	html {
+		scroll-behavior: auto;
+	}
 }
 
 @media screen and (max-width: 1269px) {
